--- a/NotePad/MainWindow.xaml
+++ b/NotePad/MainWindow.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid Background="#FF82C3FF">
-        <Button x:Name="btnOpen" Content="開啟檔案" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="28" Width="58"/>
-        <Button x:Name="btnSave" Content="存檔" HorizontalAlignment="Left" Margin="86,10,0,0" VerticalAlignment="Top" Height="28" Width="58"/>
+        <Button x:Name="btnOpen" Content="開啟檔案" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="28" Width="58" Click="btnOpen_Click"/>
+        <Button x:Name="btnSave" Content="存檔" HorizontalAlignment="Left" Margin="86,10,0,0" VerticalAlignment="Top" Height="28" Width="58" Click="btnSave_Click"/>
         <RichTextBox x:Name="rtbText" Height="NaN" Margin="10,43,10,10" Width="NaN">
             <FlowDocument>
                 <Paragraph>
